--- a/site/scss/sass-style.scss
+++ b/site/scss/sass-style.scss
@@ -47,6 +47,9 @@ html {
                 border-radius: 28px;
                 padding: 1.5rem;
                 margin-top: 1rem;
+                @media all and (min-width: 900px) {
+                    width: 20px;
+                }
                 ul li {
                     list-style-type: none;
                     display: inline-block;
