--- a/site/scss/sass-style.scss
+++ b/site/scss/sass-style.scss
@@ -13,6 +13,7 @@ html {
         height: 100%;
         text-align: center;
         font-family: 'Open Sans Condensed', sans-serif;
+        font-size: 2rem;
         i {
             color: black;
         }
@@ -26,17 +27,31 @@ html {
             header {
                 background-color: #114273;
                 padding-bottom: 1.5rem;
+                .navbar-default {
+                    background-color: #114273;
+                    border: none;
+                    text-align: right;
+                    .container-fluid {
+                        background-color: #114273;
+                        border: none;
+                        .navbar-header {
+                            background-color: #114273;
+                            border: none;
+                        }
+                        .navbar-collape {
+                            background-color: #114273;
+                            border: none;
+                        }
+                    }
+                }
                 h1 {
                     font-family: 'Fontdiner Swanky', cursive;
                     font-size: 3rem;
                     color: #FED34B;
-                    padding-top: 3.5rem;
                     margin: 0;
                 }
                 p {
                     color: white;
-                    font-size: 1.2rem;
-                    margin-top: -0.3rem;
                 }
             }
             section {
@@ -47,23 +62,20 @@ html {
                 border-radius: 28px;
                 padding: 1.5rem;
                 margin-top: 1rem;
-                @media all and (min-width: 900px) {
-                    width: 20px;
-                }
                 ul li {
                     list-style-type: none;
                     display: inline-block;
                     padding: 1rem;
                     img {
-                        width: 12rem;
+                        width: 22rem;
                         border-radius: 28px;
                     }
                 }
-                .call-to-action {
-                    background-color: white;
-                    i {
-                        font-size: 5rem;
-                    }
+            }
+            .call-to-action {
+                background-color: white;
+                i {
+                    font-size: 5rem;
                 }
             }
         }
